--- a/package.json
+++ b/package.json
@@ -144,5 +144,6 @@
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ]
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
