--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.5",
     "babel-plugin-import": "^1.13.0",
     "eslint": "^6.8.0",
     "http-proxy-middleware": "^1.0.3",
@@ -144,6 +145,15 @@
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ]
+  },
+  "babel": {
+    "plugins": [
+      ["@babel/plugin-proposal-decorators", { "legacy": true }],
+      ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css"}]
+    ],
+    "presets": [
+      "react-app"
+    ]    
   },
   "proxy": "http://localhost:4000"
 }
