--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
-    "highlight.js": "^9.18.1",
+    "highlight.js": "^10.0.3",
     "html-webpack-plugin": "4.0.0-beta.11",
     "http-proxy-middleware": "^1.0.3",
     "identity-obj-proxy": "3.0.0",
@@ -40,6 +40,7 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "marked": "^1.1.1",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
@@ -52,6 +53,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-highlight": "^0.12.0",
     "react-router-dom": "^5.1.2",
     "react-scroll-up": "^1.3.3",
     "redux-thunk": "^2.3.0",
@@ -148,12 +150,24 @@
   },
   "babel": {
     "plugins": [
-      ["@babel/plugin-proposal-decorators", { "legacy": true }],
-      ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css"}]
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ],
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "libraryDirectory": "es",
+          "style": "css"
+        }
+      ]
     ],
     "presets": [
       "react-app"
-    ]    
+    ]
   },
   "proxy": "http://localhost:4000"
 }
